--- a/tests/auth/auth_recovery_by_email_sucesso.yaml
+++ b/tests/auth/auth_recovery_by_email_sucesso.yaml
@@ -16,8 +16,7 @@ env:
 - tapOn: 'Não tenho minha senha'
 
 - runFlow: ../pages/recovery_page.yaml
-- assertVisible: , Voltar
-- tapOn: , Voltar
 
-- assertVisible: 'Senha:'
-- assertVisible: 'Não tenho minha senha'
+- tapOn: 'Receber código por email'
+
+- tapOn: 'Confirmar'
