--- a/tests/plano/plano_validar_elementos_visiveis.yaml
+++ b/tests/plano/plano_validar_elementos_visiveis.yaml
@@ -7,7 +7,7 @@ env:
     clearState: true
 
 - runFlow: ../flows/login_sucesso_flow.yaml
-- tapOn: "Plano"
+- tapOn: 'Plano'
 - runFlow:
     file: ../pages/plano_page.yaml
 
