--- a/tests/pages/recovery_page.yaml
+++ b/tests/pages/recovery_page.yaml
@@ -2,8 +2,8 @@ appId: com.vero_mobile
 ---
 
 # Verificar que estou na página de recuperação
-- assertVisible: "Por onde deseja receber o código?"
-- assertVisible: "Receber código por sms"
-- assertVisible: "Receber código por email"
-- assertVisible: "Confirmar"
-- assertVisible: "Voltar"
+- assertVisible: 'Por onde deseja receber o código?'
+- assertVisible: 'Receber código por sms'
+- assertVisible: 'Receber código por email'
+- assertVisible: 'Confirmar'
+- assertVisible: 'Voltar'
