test: aprimora testes de pagamento e refatora suite de autenticação
- Financeiro:
  - Ajusta regex e adiciona scroll/swipe extra para garantir clique no botão "Pagar" em telas menores.
  - Adiciona validação de carregamento na tela Financeiro para evitar falsos negativos.
  - Implementa scrollUntilVisible para campos de cartão (número, validade, CVV).
  - Simplifica validação de valores monetários para evitar erros de formatação.

- Autenticação:
  - Atualiza suite_auth_flow.yaml para incluir cenários de ajuda e recuperação.
  - Corrige validações de passos no teste auth_precisa_de_ajuda.yaml.
  - Remove configurações redundantes de variáveis de ambiente.
  - Corrige caminhos absolutos para relativos em auth_login_cpf_obrigatorio.yaml.

--- a/tests/auth/auth_login_sucesso.yaml
+++ b/tests/auth/auth_login_sucesso.yaml
@@ -1,8 +1,4 @@
 appId: com.vero_mobile
-env:
-  CPF_TESTE: ${CPF_TESTE}
-  SENHA_TESTE: ${SENHA_TESTE}
-
 ---
 # TESTE: Login com sucesso
 - launchApp:
@@ -10,11 +6,11 @@ env:
 
 - runFlow: ../pages/login_page.yaml
 - tapOn: 'Insira o número do seu documento'
-- inputText: ${CPF_TESTE}
+- inputText: ${CPF_ADAPTER2}
 - tapOn: 'Avançar'
 - assertVisible: 'Senha:'
 - tapOn: 'Insira sua senha'
-- inputText: ${SENHA_TESTE}
+- inputText: ${SENHA_ADAPTER2}
 - tapOn: Entrar
 - assertVisible: 'Home'
 - assertVisible: 'Acesso rápido'
