--- a/tests/financeiro/financeiro_pagar_cartao_de_credito_falha.yaml
+++ b/tests/financeiro/financeiro_pagar_cartao_de_credito_falha.yaml
@@ -6,6 +6,7 @@ env:
 - launchApp:
     clearState: true
 - runFlow: ../flows/login_sucesso_flow.yaml
+- assertVisible: Biometria
 - assertVisible: Agora Não
 - tapOn: Agora Não
 #- assertVisible: Instabilidade no sistema, algumas funcionalidades podem apresentar erros
@@ -13,10 +14,14 @@ env:
 #- tapOn: OK
 - assertVisible: Financeiro
 - tapOn: Financeiro
-- assertVisible: Pagar fatura
-- tapOn: Pagar fatura
-- runFlow: ../pages/pagamentos_page.yaml
-- tapOn: Pagar com cartão
-- assertVisible: Voltar
-- tapOn: Voltar
-- assertVisible: Pagar fatura
+- runFlow: ../pages/financeiro_page.yaml
+- runFlow:
+    when:
+      visible: Pagar fatura
+    commands:
+      - tapOn: Pagar fatura
+      - runFlow: ../pages/pagamentos_page.yaml
+      - tapOn: Pagar com cartão
+      - assertVisible: Voltar
+      - tapOn: Voltar
+      - assertVisible: Pagar fatura
