--- a/tests/auth/auth_login_cpf_obrigatorio.yaml
+++ b/tests/auth/auth_login_cpf_obrigatorio.yaml
@@ -3,9 +3,10 @@ appId: com.vero_mobile
 # TESTE: CPF obrigatório
 - launchApp:
     clearState: true
-- runFlow: C:\Users\edcle\OneDrive\Desktop\minhaVeroApp\tests\pages\login_page.yaml
+- runFlow: ../pages/login_page.yaml
 - tapOn: 'Avançar'
 - assertVisible: 'Campo obrigatório'
 - assertVisible: 'Por favor, preencha o campo de CPF ou CNPJ.'
 - tapOn: 'OK'
 - assertVisible:  Entrar
+- runFlow: ../pages/login_page.yaml
