--- a/tests/auth/auth_login_senha_errada.yaml
+++ b/tests/auth/auth_login_senha_errada.yaml
@@ -1,7 +1,4 @@
 appId: com.vero_mobile
-env:
-  CPF_TESTE: ${CPF_TESTE}
-
 ---
 # TESTE: Usuário válido + Senha errada
 - launchApp:
@@ -9,7 +6,7 @@ env:
 
 - runFlow: ../pages/login_page.yaml
 - tapOn: 'Insira o número do seu documento'
-- inputText: ${CPF_TESTE}
+- inputText: ${CPF_ADAPTER}
 - tapOn: 'Avançar'
 - assertVisible: 'Senha:'
 - tapOn: 'Insira sua senha'
