--- a/tests/auth/auth_login_senha_obrigatoria.yaml
+++ b/tests/auth/auth_login_senha_obrigatoria.yaml
@@ -1,14 +1,11 @@
 appId: com.vero_mobile
-env:
-  CPF_TESTE: ${CPF_TESTE}
-
 ---
 # TESTE: Senha obrigatória
 - launchApp:
     clearState: true
 - runFlow: ../pages/login_page.yaml
 - tapOn: 'Insira o número do seu documento'
-- inputText: ${CPF_TESTE}
+- inputText: ${CPF_ADAPTER}
 - tapOn: 'Avançar'
 - assertVisible: 'Senha:'
 - tapOn: 'Entrar'
