--- a/tests/pages/pagamentos_page.yaml
+++ b/tests/pages/pagamentos_page.yaml
@@ -6,9 +6,27 @@ appId: com.vero_mobile
     text: '\d{4,5}\s*[-–]\s*.*'
 - assertVisible:
     text: 'R\$ .*'
-- assertVisible:
-    text: 'Vencimento: .*'
-- assertVisible: Fatura Vencida
+- runFlow:
+    when:
+      visible:
+        text: 'Vencimento: .*'
+    commands:
+      - assertVisible:
+          text: 'Vencimento: .*'
+- runFlow:
+    when:
+      visible:
+        text: '(?i)fatura\s*vencida'
+    commands:
+      - assertVisible:
+          text: '(?i)fatura\s*vencida'
+- runFlow:
+    when:
+      visible:
+        text: '(?i)fatura\s*aberta'
+    commands:
+      - assertVisible:
+          text: '(?i)fatura\s*aberta'
 - assertVisible: Escolha uma forma de pagamento
 - assertVisible: Pix
 - assertVisible: Segunda via de Fatura
