feat(tests): melhorias no scroll de pagamento, novos testes de recovery e refatoração da doc
Principais alterações:
- Financeiro: Adicionado `scrollUntilVisible` e ação de `swipe` extra em `financeiro_pagar_cartao_de_credito_sucesso.yaml` para garantir que o botão "Pagar" seja clicável em telas menores.
- Auth: Criados novos cenários negativos de recuperação de senha (`auth_recovery_codigo_obrigatorio.yaml` e `auth_recovery_senha_obrigatoria.yaml`).
- Suite: Atualizado `suite_auth_flow.yaml` para incluir os novos testes e reorganizar a execução.
- Refactor: Substituição de caminhos absolutos por relativos em diversos arquivos para garantir portabilidade.
- Docs: Reescrita completa de `docs/casos-de-teste.md` mapeando todos os testes atuais (IDs, passos e resultados) e remoção de arquivos de documentação obsoletos na raiz do projeto.

--- a/tests/auth/auth_recovery_senha_obrigatoria.yaml
+++ b/tests/auth/auth_recovery_senha_obrigatoria.yaml
@@ -1,5 +1,6 @@
 appId: com.vero_mobile
 ---
+# TESTE: Validação de campo obrigatório - Nova Senha
 - launchApp:
     clearState: true
 
@@ -9,25 +10,25 @@ appId: com.vero_mobile
 - tapOn: 'Avançar'
 - assertVisible: 'Não tenho minha senha'
 - tapOn: 'Não tenho minha senha'
+
 - runFlow: ../pages/recovery_page.yaml
-- tapOn: 'Receber código por email'
-- tapOn: 'Confirmar'
+- tapOn:
+    text: 'Receber código por sms'
+    index: 1
+- tapOn: Confirmar, 
+
 - assertVisible: 'Código de recuperação::'
-- assertVisible:
+- tapOn:
     id: input-text-field
     index: 1
 - assertVisible: 'Nova Senha::'
-- assertVisible:
+- tapOn:
     id: input-text-field
     index: 2
-- assertVisible: Alterar Senha, 
-- tapOn: Alterar Senha
-- assertVisible: Campo obrigatório
+- tapOn: 'Código de recuperação::'
+- inputText: '123456'
+- tapOn: 'Alterar Senha'
+
+- assertVisible: 'Campo obrigatório'
 - assertVisible: Por favor, preencha o campo de código.
-- assertVisible: OK
-- tapOn: OK
-- assertVisible: Reenviar Código
-- tapOn: Reenviar Código
-- runFlow: ../pages/recovery_page.yaml
-- tapOn: 'Receber código por email'
-- tapOn: 'Confirmar'
+- tapOn: 'OK'
