--- a/tests/auth/auth_recovery_by_email_sucesso.yaml
+++ b/tests/auth/auth_recovery_by_email_sucesso.yaml
@@ -4,19 +4,12 @@ env:
 ---
 - launchApp:
       clearState: true
-
 - runFlow: ../pages/login_page.yaml
-
 - tapOn: 'Insira o número do seu documento'
-- inputText: ${CPF_TESTE}
-
+- inputText: ${CPF_ADAPTER}
 - tapOn: 'Avançar'
-
 - assertVisible: 'Não tenho minha senha'
 - tapOn: 'Não tenho minha senha'
-
 - runFlow: ../pages/recovery_page.yaml
-
 - tapOn: 'Receber código por email'
-
 - tapOn: 'Confirmar'
