--- a/tests/auth/auth_recovery_codigo_obrigatorio.yaml
+++ b/tests/auth/auth_recovery_codigo_obrigatorio.yaml
@@ -1,7 +1,9 @@
 appId: com.vero_mobile
 ---
+# TESTE: Validação de campo obrigatório - Código de Recuperação
 - launchApp:
     clearState: true
+
 
 - runFlow: ../pages/login_page.yaml
 - tapOn: 'Insira o número do seu documento'
@@ -9,25 +11,30 @@ appId: com.vero_mobile
 - tapOn: 'Avançar'
 - assertVisible: 'Não tenho minha senha'
 - tapOn: 'Não tenho minha senha'
+
 - runFlow: ../pages/recovery_page.yaml
-- tapOn: 'Receber código por email'
-- tapOn: 'Confirmar'
+- tapOn:
+    text: 'Receber código por sms'
+    index: 1 
+- tapOn: Confirmar, 
+
+
+- tapOn: 'Nova Senha::'
+- inputText: 'NovaSenha123'
+- tapOn: 'Alterar Senha'
+
+
 - assertVisible: 'Código de recuperação::'
-- assertVisible:
+- tapOn:
     id: input-text-field
     index: 1
 - assertVisible: 'Nova Senha::'
-- assertVisible:
+- tapOn:
     id: input-text-field
     index: 2
-- assertVisible: Alterar Senha, 
-- tapOn: Alterar Senha
-- assertVisible: Campo obrigatório
+- tapOn: 'Código de recuperação::'
+- inputText: '123456'
+- tapOn: 'Alterar Senha'
+
+- assertVisible: 'Campo obrigatório'
 - assertVisible: Por favor, preencha o campo de código.
-- assertVisible: OK
-- tapOn: OK
-- assertVisible: Reenviar Código
-- tapOn: Reenviar Código
-- runFlow: ../pages/recovery_page.yaml
-- tapOn: 'Receber código por email'
-- tapOn: 'Confirmar'
