--- a/tests/auth/rec_senha_sms_falha.yaml
+++ b/tests/auth/rec_senha_sms_falha.yaml
@@ -5,37 +5,19 @@ appId: com.vero_mobile
     clearState: true
 
 - runFlow: ../pages/login_page.yaml
-- tapOn: 'Insira o número do seu documento'
-- inputText: ${CPF_TESTE}
-
-- tapOn: 'Avançar'
-
+- tapOn: Insira o número do seu documento
+- inputText: ${CPF_ADAPTER}
+- tapOn: Avançar, 
 - assertVisible: 'Não tenho minha senha'
 - tapOn: 'Não tenho minha senha'
-
-- runFlow: ../pages/recovery_page.yaml
-- assertVisible: 719******29
-- assertVisible:
-    text: Receber código por sms
-    index: 1
+- runFlow: ../pages/login_receber_codigo_page.yaml
 - tapOn: 719******29
-#- tapOn:
-#    point: 10%,42%
-- assertVisible: Confirmar, 
 - tapOn: Confirmar, 
-
-- assertVisible:  Recuperar senha
-- assertVisible: 'Código de recuperação::'
-- assertVisible: 'Nova Senha::'
-- assertVisible: 'Alterar Senha'
-- assertVisible: 'Insira o número do seu documento'
-
+- runFlow: ..\pages\login_recuperar_senha_page.yaml
 - tapOn: 'Código de recuperação::'
 - inputText: '123456'
-
 - tapOn: 'Nova Senha::'
 - inputText: 'NovaSenha123'
-
 - tapOn: 'Alterar Senha'
 - assertVisible: Campo obrigatório
 - assertVisible: Por favor, preencha o campo de código.
