--- a/tests/flows/login_sucesso_flow.yaml
+++ b/tests/flows/login_sucesso_flow.yaml
@@ -1,16 +1,17 @@
 # tests/flows/login_sucesso_flow.yaml
 appId: com.vero_mobile
-env:
-  # Defina aqui qual usuário do .env será usado como padrão, caso não seja informado pelo fluxo pai
-  CPF_TESTE: ${CPF_ADAPTER2}
-  SENHA_TESTE: ${SENHA_ADAPTER2}
+#env:
+# Defina aqui qual usuário do .env será usado como padrão, caso não seja informado pelo fluxo pai
+# CPF_TESTE: ${CPF_ADAPTER2}
+# SENHA_TESTE: ${SENHA_ADAPTER2}
 ---
 - launchApp:
     clearState: true
-- tapOn: Insira o número do seu documento
-- inputText: ${CPF_ADAPTER2}
+- tapOn:
+    text: 'Insira o número do seu documento'
+- inputText: ${CPF_ADAPTER_2}
 - tapOn: Avançar, 
 - assertVisible: 'Senha:'
 - tapOn: 'Insira sua senha'
-- inputText: ${SENHA_ADAPTER2}
+- inputText: ${SENHA_ADAPTER_2}
 - tapOn: 'Entrar'
