--- a/tests/financeiro/pagamento_selecao_fatura.yaml
+++ b/tests/financeiro/pagamento_selecao_fatura.yaml
@@ -20,4 +20,4 @@ env:
       visible: Pagar fatura
     commands:
       - tapOn: Pagar fatura
-      - runFlow: ../pages/pagamentos_page.yaml
+      - runFlow: ../pages/pagamento_fatura_page.yaml
