--- a/tests/financeiro/segunda_via_fatura.yaml
+++ b/tests/financeiro/segunda_via_fatura.yaml
@@ -19,7 +19,7 @@ env:
       visible: Pagar fatura
     commands:
       - tapOn: Pagar fatura
-      - runFlow: ../pages/pagamentos_page.yaml
+      - runFlow: ../pages/pagamento_fatura_page.yaml
       - tapOn: Segunda via de Fatura
       - assertVisible: Voltar
       - tapOn: Voltar
